# quickamm-fastapi

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  setup.py  setup.sh
src/qa/: __init__.py
src/qa/api/: api.py  builders.py  mcq_factories.py  reports.py
src/qa/common/: base_factory.py  models.py
src/qa/fauna/: __init__.py  db.py  factories.py  models.py
src/qa/flora/: __init__.py  db.py  factories.py  models.py
src/qa/mcq_db/: __init__.py  db.py  factories.py  models.py
src/qa/species/: factories.py  models.py
src/qa/steps/: gelures.py
src/qa/topics/: themes.py
src/qa/toponymy/: __init__.py  db.py  factories.py  models.py
src/resources/: cold.json  mcq_example.json  mcq_explanation.json  problems.json  refs_mcq.json  species.json  themes.json
src/resources/fauna/: fauna.json  fauna_save.json  vega-classification-especes-montagne.json  vega-classification-invertebre.json  vega-classification-vertebre.json  vega-geology.json
src/resources/fauna/pictures/: AMM-fauna-classification-V1-3svg
src/resources/flora/: flowers.json  mature_flower.json
src/resources/mcq_models/: general.json  template.json
src/resources/mcq_models/meteo/: altimetre.json
src/resources/old/: knowledge.json  mcq_models.json  new_mcq_data.json  ref_mcq_worker.json
src/resources/saves/: flowers_save.json
src/resources/toponymy/: toponymy.json  toponymy_save.json
src/webapi/: main.py
tests/: test_toponymy.py
tests/test_qa/test_api/: test_mcq_factories.py
tests/test_qa/test_species/: test_factories.py  test_models.py
tests/test_qa/test_steps/: test_gelures.py
tests/test_qa/test_topics/: test_themes.py
(+6 files in other folders)
