[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quickamm-fastapi"
version = "0.1.0"
authors = [
    { name = "D'Harréville Renaud", email = "r.dharreville@valier.ovh" },
]
description = "API to deliver questions for quickamm project"
readme = "README.md"
classifiers = []

# --- THIS IS THE FIX ---
# 1. We removed 'dynamic = ["dependencies"]'
# 2. We add dependencies directly here:
dependencies = [
    # Copy your requirements from requirements.txt, for example:
    "fastapi",
    "uvicorn[standard]",
    "numpy"
]

[project.optional-dependencies]
dev = ["jupyter", "pytest", "sphinx", "sphinx-rtd-theme", "wheel"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"resources" = ["**/*"]